<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="fitXY"
        android:id="@+id/collegeImage"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/About_College"
        android:layout_marginHorizontal="@dimen/text_margin"
        android:textSize="@dimen/text_size"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/lato_light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Branches"
        android:layout_marginTop="36dp"
        android:textSize="@dimen/title_size"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColor"
        android:fontFamily="@string/bold"/>
    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/viewPager"
        android:layout_marginTop="@dimen/text_margin"
        android:foregroundGravity="center"
        android:clipToPadding="false"
        android:overScrollMode="never"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact Details"
        android:layout_marginTop="36dp"
        android:textSize="@dimen/title_size"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColor"
        android:fontFamily="@string/bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginHorizontal="@dimen/text_margin"
        android:textSize="@dimen/text_size"

        android:textColor="@color/textColor"
        android:fontFamily="@string/bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aligarh Muslim University,Aligarh"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginHorizontal="@dimen/text_margin"
        android:textSize="@dimen/text_size"

        android:textColor="@color/textColor"
        android:fontFamily="@string/bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email:myamu.ac.in"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginHorizontal="@dimen/text_margin"
        android:textSize="@dimen/text_size"

        android:textColor="@color/textColor"
        android:fontFamily="@string/bold"/>


    <ImageView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_margin="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/zhcet_image" />





</LinearLayout>
</androidx.core.widget.NestedScrollView>